--- a/html/00_intro.html
+++ b/html/00_intro.html
@@ -76,7 +76,7 @@
 
 <p><a class="p_ident" id="p-qVW3tGNC2l" href="#p-qVW3tGNC2l" tabindex="-1" role="presentation"></a>Por supuesto, introducir manualmente estos patrones arcanos de bits (los unos y ceros) hacía que el programador se sintiera como un mago poderoso. Y eso debe valer algo en términos de satisfacción laboral.</p>
 
-<p><a class="p_ident" id="p-XX2sDr75GI" href="#p-XX2sDr75GI" tabindex="-1" role="presentation"></a>Cada línea del programa anterior contiene una única instrucción. Podría escribirse en inglés de la siguiente manera:</p>
+<p><a class="p_ident" id="p-XX2sDr75GI" href="#p-XX2sDr75GI" tabindex="-1" role="presentation"></a>Cada línea del programa anterior contiene una única instrucción. Podría escribirse en español de la siguiente manera:</p>
 
 <ol>
 
