--- a/html/07_robot.html
+++ b/html/07_robot.html
@@ -28,14 +28,14 @@
 
 <p><a class="p_ident" id="p-CoFPYYp5Q2" href="#p-CoFPYYp5Q2" tabindex="-1" role="presentation"></a>El pueblo de Meadowfield no es muy grande. Consiste en 11 lugares con 14 carreteras entre ellos. Se puede describir con este array de carreteras:</p>
 
-<pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-GE3XA1Ye9G" href="#c-GE3XA1Ye9G" tabindex="-1" role="presentation"></a><span class="tok-keyword">const</span> <span class="tok-definition">roads</span> = [
+<pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-NplCaNzuvn" href="#c-NplCaNzuvn" tabindex="-1" role="presentation"></a><span class="tok-keyword">const</span> <span class="tok-definition">roads</span> = [
   <span class="tok-string">&quot;Casa de Alice-Casa de Bob&quot;</span>,<span class="tok-string">&quot;Casa de Alice-Cabaña&quot;</span>,
   <span class="tok-string">&quot;Casa de Alice-Oficina de Correos&quot;</span>,<span class="tok-string">&quot;Casa de Bob-Ayuntamiento&quot;</span>,
   <span class="tok-string">&quot;Casa de Daria-Casa de Ernie&quot;</span>,<span class="tok-string">&quot;Casa de Daria-Ayuntamiento&quot;</span>,
   <span class="tok-string">&quot;Casa de Ernie-Casa de Grete&quot;</span>,<span class="tok-string">&quot;Casa de Grete-Granja&quot;</span>,
-  <span class="tok-string">&quot;Casa de Grete-Tienda&quot;</span>,<span class="tok-string">&quot;Plaza de Mercado-Granja&quot;</span>,
-  <span class="tok-string">&quot;Plaza de Mercado-Oficina de Correos&quot;</span>,<span class="tok-string">&quot;Plaza de Mercado-Tienda&quot;</span>,
-  <span class="tok-string">&quot;Plaza de Mercado-Ayuntamiento&quot;</span>,<span class="tok-string">&quot;Tienda-Ayuntamiento&quot;</span>
+  <span class="tok-string">&quot;Casa de Grete-Tienda&quot;</span>,<span class="tok-string">&quot;Plaza del Mercado-Granja&quot;</span>,
+  <span class="tok-string">&quot;Plaza del Mercado-Oficina de Correos&quot;</span>,<span class="tok-string">&quot;Plaza del Mercado-Tienda&quot;</span>,
+  <span class="tok-string">&quot;Plaza del Mercado-Ayuntamiento&quot;</span>,<span class="tok-string">&quot;Tienda-Ayuntamiento&quot;</span>
 ];</pre><figure><img src="img/village2x.png" alt="Ilustración de arte pixelado de un pequeño pueblo con 11 ubicaciones, etiquetadas con letras, y carreteras entre ellas"></figure>
 
 <p><a class="p_ident" id="p-z97coTX23j" href="#p-z97coTX23j" tabindex="-1" role="presentation"></a>La red de carreteras en el pueblo forma un <em>gráfico</em>. Un gráfico es una colección de puntos (lugares en el pueblo) con líneas entre ellos (carreteras). Este gráfico será el mundo por el que se moverá nuestro robot.</p>
