fix: update Open Graph and Twitter card URLs to reflect new domain for Eloquent JavaScript en Español

--- a/html/index.html
+++ b/html/index.html
@@ -7,16 +7,16 @@
   <meta name="description" content="Libro para Aprender JavaScript desde cero traducido al español y gratuito">
 
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://eloquent-javascript-es.vercel.app/">
+  <meta property="og:url" content="https://eloquentjavascript.es/">
   <meta property="og:title" content="Eloquent JavaScript en Español">
   <meta property="og:description" content="Libro para Aprender JavaScript desde cero traducido al español y gratuito">
-  <meta property="og:image" content="https://eloquent-javascript-es.vercel.app/og.jpg">
+  <meta property="og:image" content="https://eloquentjavascript.es/og.jpg">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://eloquent-javascript-es.vercel.app/">
+  <meta name="twitter:url" content="https://eloquentjavascript.es/">
   <meta name="twitter:title" content="Eloquent JavaScript en Español">
   <meta name="twitter:description" content="Libro para Aprender JavaScript desde cero traducido al español y gratuito">
-  <meta name="twitter:image" content="https://eloquent-javascript-es.vercel.app/og.jpg">
+  <meta name="twitter:image" content="https://eloquentjavascript.es/og.jpg">
 
   <link rel=stylesheet href="css/ejs.css">
   <style>
