Add canonical url

--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,8 @@
   <meta name="twitter:description" content="Libro para Aprender JavaScript desde cero traducido al español y gratuito">
   <meta name="twitter:image" content="https://eloquentjavascript.es/og.jpg">
 
+  <link rel="canonical" href="https://eloquentjavascript.es/">
+
   <link rel=stylesheet href="css/ejs.css">
   <style>
     article {
