--- a/html/02_program_structure.html
+++ b/html/02_program_structure.html
@@ -30,7 +30,7 @@
 
 <p><a class="p_ident" id="p-UqOwwtmeFY" href="#p-UqOwwtmeFY" tabindex="-1" role="presentation"></a>Esto muestra parte de la belleza de una interfaz basada en un lenguaje. Las expresiones pueden contener otras expresiones de manera similar a cómo las oraciones están anidadas en el lenguaje humano —una oración puede contener sus propias oraciones y así sucesivamente. Esto nos permite construir expresiones que describen cálculos arbitrariamente complejos.</p>
 
-<p><a class="p_ident" id="p-ZVBoR+/oNP" href="#p-ZVBoR+/oNP" tabindex="-1" role="presentation"></a>Si una expresión corresponde a un fragmento de oración, una <em>declaración</em> (o sentencia) de JavaScript corresponde a una oración completa. Un programa es una lista de declaraciones.</p>
+<p><a class="p_ident" id="p-ZVBoR+/oNP" href="#p-ZVBoR+/oNP" tabindex="-1" role="presentation"></a>Si una expresión corresponde a un fragmento de oración, una <em>declaración</em> (o sentencia, o instrucción) de JavaScript corresponde a una oración completa. Un programa es una lista de declaraciones.</p>
 
 <p><a class="p_ident" id="p-VEI0X64AX2" href="#p-VEI0X64AX2" tabindex="-1" role="presentation"></a>El tipo más simple de declaración es una expresión con un punto y coma al final. Esto es un programa:</p>
 
