último fix. Había fallos en los commits

--- a/html/03_functions.html
+++ b/html/03_functions.html
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 <!doctype html>
 <head>
   <meta charset="utf-8">
@@ -62,7 +60,7 @@ console.log(redondearA(<span class="tok-number">23</span>, <span class="tok-numb
 
 <p><a class="p_ident" id="p-ARnrqQSLJF" href="#p-ARnrqQSLJF" tabindex="-1" role="presentation"></a>Los parámetros de una función se comportan como asociaciones habituales, pero sus valores iniciales son dados por el <em>llamador</em> de la función, no por el propio código de la función.</p>
 
-<h2><a class="h_ident" id="h-wxzpzC5WZf" href="#h-wxzpzC5WZf" tabindex="-1" role="presentation"></a>Enlaces y ámbitos</h2>
+<h2><a class="h_ident" id="h-tkZdkO6of4" href="#h-tkZdkO6of4" tabindex="-1" role="presentation"></a>Asociaciones y ámbitos</h2>
 
 <p><a class="p_ident" id="p-BeL3Sj3y+H" href="#p-BeL3Sj3y+H" tabindex="-1" role="presentation"></a>Cada asociación tiene un <em>ámbito</em>, que es la parte del programa en la que la asociación es visible. Para las asociaciones definidas fuera de cualquier función, bloque o módulo (ver <a href="10_modules.html">Capítulo 10</a>), el ámbito es todo el programa —puedes hacer referencia a esas asociaciones donde quieras. Estas asociaciones se llaman asociaciones <em>globales</em>.</p>
 
@@ -482,7 +480,7 @@ imprimirInventarioGranja(<span class="tok-number">7</span>, <span class="tok-num
 
 <h3><a class="i_ident" id="i-mzHH/MSSBA" href="#i-mzHH/MSSBA" tabindex="-1" role="presentation"></a>Mínimo</h3>
 
-<p><a class="p_ident" id="p-F1St/b+Tyk" href="#p-F1St/b+Tyk" tabindex="-1" role="presentation"></a>El <a href="02_program_structure.html#return_values">capítulo previo</a> presentó la función estándar <code>Math.min</code> que devuelve su menor argumento. Ahora podemos escribir una función como esa nosotros mismos. Define la función <code>min</code> que toma dos argumentos y devuelve su mínimo.</p>
+<p><a class="p_ident" id="p-xHYMbkCoZJ" href="#p-xHYMbkCoZJ" tabindex="-1" role="presentation"></a>En el <a href="02_program_structure.html#return_values">capítulo previo</a> se introdujo la función estándar <code>Math.min</code> que devuelve el menor de sus argumentos. Ahora podemos escribir una función como esa nosotros mismos. Define la función <code>min</code> que toma dos argumentos y devuelve su mínimo.</p>
 
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-YPzD49JsIQ" href="#c-YPzD49JsIQ" tabindex="-1" role="presentation"></a><span class="tok-comment">// Tu código aquí.</span>
 
@@ -564,4 +562,3 @@ console.log(contarCaracter(<span class="tok-string">&quot;kakkerlak&quot;</span>
 </article>
 
 <script src="ejs.js"></script>
->>>>>>> a4f1e1e (Actualización del capítulo 2. Capítulo 3 revisado.)
